[project]
name = "langraph-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=1.2.15",
    "rich>=15.0.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # Checks for print statements, 
    "COM812", # Checks for the absence of trailing commas.
    "INP001", # Checks for packages that are missing an __init__.py file.
    "D",      # All pydocstyle (D)
    "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
    "ERA001", # Checks for commented-out Python code.
    "A004",   # Shadowing Python Builtin
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["react_agent"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
